alignment issue

--- a/real_estate_main/static/css/main.css
+++ b/real_estate_main/static/css/main.css
@@ -15,7 +15,7 @@ footer{
 }
 
 .add-pad{
-	padding-top: 60px;
+	padding-top: 7px;
 }
 
 /* Contact Page */
